objects/Product_Quotes__c.object
<CustomObject>
    <description>used in conjunction with Issue Tracker to track engineering requests</description>
    <fields>
        <fullName>Assigned_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>fills in with the name of the Approver from the related Issue Tracker, used in conjunction with approval processes</description>
        <inlineHelpText>fills in with the name of the Approver from the related Issue Tracker, used in conjunction with approval processes</inlineHelpText>
        <label>Assigned to:</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Product_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Enter the date the product quote was received from the field, defaults to today</description>
        <inlineHelpText>Enter the date the product quote was received from the field, defaults to today</inlineHelpText>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Drawing_Reference__c</fullName>
        <label>Drawing Reference</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Issue_Tracker__c</fullName>
        <description>Issue Tracker number associated with this product quote</description>
        <inlineHelpText>Issue Tracker number associated with this product quote</inlineHelpText>
        <label>Issue Tracker</label>
        <referenceTo>Request_for_Information_RFI__c</referenceTo>
        <relationshipLabel>Product Quotes</relationshipLabel>
        <relationshipName>Product_Quotes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Notes_and_Additional_Information__c</fullName>
        <description>Use this section to add detailed notes regarding the product quote</description>
        <inlineHelpText>Use this section to add detailed notes regarding the product quote</inlineHelpText>
        <label>Notes and Additional Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OK_to_Submit_for_Approval__c</fullName>
        <description>Used to determine if Product Quote can be submitted for approval.</description>
        <formula>IF( NOT(ISBLANK(Project_Product__c )), 
IMAGE(&quot;/servlet/servlet.FileDownload?file=015800000015Isw&quot;, &quot;WHITE&quot;),
IMAGE(&quot;/servlet/servlet.FileDownload?file=01534000002EjCQ&quot;, &quot;WHITE&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Product Quote must have a Project Product before it can be submitted for approval.</inlineHelpText>
        <label>OK to Submit for Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>Displays the Product from the related Project Product.</description>
        <formula>Project_Product__r.Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the Product from the related Project Product.</inlineHelpText>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Issue_Tracker__r.ASProject__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Search &quot;PP-&quot; to bring up all Project Products associated with that Project.</inlineHelpText>
        <label>Project Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Project_Products__c.Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.Project__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Project_Products__c</referenceTo>
        <relationshipLabel>Product Quotes</relationshipLabel>
        <relationshipName>Product_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>link filled in by trigger?</inlineHelpText>
        <label>Project</label>
        <referenceTo>AcctSeed__Project__c</referenceTo>
        <relationshipLabel>Product Quotes</relationshipLabel>
        <relationshipName>Product_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_Response_Date__c</fullName>
        <description>The target date that you are asking the approver to respond by</description>
        <inlineHelpText>The target date that you are asking the approver to respond by</inlineHelpText>
        <label>Requested Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <description>The response details to the quote submitted from the approver. Must be filled out before Submittal can be complete</description>
        <inlineHelpText>The response details to the quote submitted from the approver. Must be filled out before Submittal can be complete.</inlineHelpText>
        <label>Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Selected_Users__c</fullName>
        <label>Selected Users</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Highlight__c</fullName>
        <description>This changes based on the status of the product quote to call out Status on the page</description>
        <formula>IF(ISPICKVAL(Status__c,&quot;Approval Pending&quot;),IMAGE( &quot;/servlet.FileDownload?file=0154C0000005IRV&quot;, &quot;Submitted Pending1&quot;), 
IF(ISPICKVAL(Status__c,&quot;Rejected&quot;),IMAGE( &quot;/servlet/servlet.FileDownload?file=0154C0000005IRQ&quot;, &quot;Rejected1&quot;), 
IF(ISPICKVAL(Status__c,&quot;Cancelled&quot;),IMAGE( &quot;/servlet/servlet.FileDownload?file=0158000000151bq&quot;, &quot;Cancelled&quot;), 
IF(ISPICKVAL(Status__c,&quot;New&quot;),IMAGE( &quot;/servlet/servlet.FileDownload?file=0154C0000005IR6&quot;, &quot;New&quot;), 
IF(ISPICKVAL(Status__c,&quot;Revise and Resubmit&quot;),IMAGE( &quot;/servlet/servlet.FileDownload?file=015800000014viT&quot;, &quot;Revise and Resubmit1&quot;), 
IF(ISPICKVAL(Status__c,&quot;Approved as Corrected&quot;),IMAGE( &quot;/servlet/servlet.FileDownload?file=015800000014vhz&quot;, &quot;Approved as Corrected1&quot;), 
IF(ISPICKVAL(Status__c,&quot;Approved&quot;),IMAGE( &quot;/servlet/servlet.FileDownload?file=015800000014vi4&quot;, &quot;Approved&quot;), 
IF(ISPICKVAL(Status__c,&quot;Re-assigned&quot;),IMAGE( &quot;/servlet/servlet.FileDownload?file=0154C0000005IRa&quot;, &quot;Re-assigned&quot;), 
&quot;&quot;))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This changes based on the status of the product quote</inlineHelpText>
        <label>Status Highlight</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Used to track and manage the status of the product quote</description>
        <inlineHelpText>Used to track and manage the status of the product quote</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
                <value>
                    <fullName>Revise and Resubmit</fullName>
                </value>
                <value>
                    <fullName>Approved as Corrected</fullName>
                </value>
                <value>
                    <fullName>Approval Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>Free text entry</description>
        <inlineHelpText>Free text entry</inlineHelpText>
        <label>Subject</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <label>Product Quotes</label>
    <nameField>
        <label>Product Quotes Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Quotes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>